# holidaymaker

./: CMakeLists.txt
src/: CMakeLists.txt
src/cmd/: CMakeLists.txt  holidaymaker.cpp
src/lib/: CMakeLists.txt  employee.cpp  employee.h
src/lib/cmake/: holidaymakerConfig.cmake
src/qt5/: employee_add.ui  main.ui
